kubernetes/archivebox/prod-d1/archivebox-deployment.yaml
# Usage:
#     mkdir -p ~/archivebox/data && cd ~/archivebox
#     curl -fsSL 'https://docker-compose.archivebox.io' > docker-compose.yml
#     docker compose run archivebox version
#     docker compose run archivebox config --set SAVE_ARCHIVE_DOT_ORG=False
#     docker compose run archivebox add --depth=1 'https://news.ycombinator.com'
#     docker compose run -T archivebox add < bookmarks.txt
#     docker compose up -d && open 'https://localhost:8000'
#     docker compose run archivebox help
# Documentation:
#     https://github.com/ArchiveBox/ArchiveBox/wiki/Docker#docker-compose

# ArchiveBox Deployment with Longhorn for storage
# This setup includes ArchiveBox, Sonic for search, and NoVNC for browser interaction
# Persistent storage is managed via Longhorn

# ArchiveBox Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: archivebox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: archivebox
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      restartPolicy: Always
      containers:
      - name: archivebox
        args: ["server", "--quick-init", "0.0.0.0:8000"] # 
        image: archivebox/archivebox:latest
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        volumeMounts:
        - name: archivebox-storage
          mountPath: /data
      volumes:
      - name: archivebox-storage
        persistentVolumeClaim:
          claimName: archivebox-pvc
