kubernetes/archivebox/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: archivebox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: archivebox
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      restartPolicy: Always
      containers:
      - name: archivebox
        args: ["server", "--quick-init"] # 
        image: archivebox/archivebox:latest
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
        resources:
            limits:
              memory: "1536Mi"
              cpu: "1"
        volumeMounts:
          - name: archivebox-storage
            mountPath: /data
          - name: archivebox-nfs
            mountPath: /data/archive
      volumes:
        - name: archivebox-storage
          persistentVolumeClaim:
            claimName: archivebox-pvc
        - name: archivebox-nfs
          nfs:
            server: 10.15.21.132
            path: /mnt/user/archives/websites/archivebox
