kubernetes/archivebox/prod-d1/novnc-deployment.yaml
# NoVNC Deployment
# This allows you to view/control ArchiveBox's browser interface
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novnc
  namespace: archivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novnc
  template:
    metadata:
      labels:
        app: novnc
    spec:
      containers:
      - name: novnc
        image: theasp/novnc:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
