kubernetes/archivebox/prod-d1/pywb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pywb-service
  namespace: archivebox
spec:
  selector:
    app: pywb
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
