kubernetes/archivebox/prod-d1/service.yaml
# ArchiveBox Service
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  namespace: archivebox
spec:
  selector:
    app: archivebox
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
      name: http
  type: NodePort
