kubernetes/archivebox/prod-d1/sonic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonic-service
  namespace: archivebox
spec:
  selector:
    app: sonic
  ports:
    - port: 1491
